<resources>
    <string name="app_name">Lista de Compras</string>
    <string name="adicionar_item">+</string>
    <string name="nome_do_produto">Nome do produto</string>
    <string name="cadastrar_produto">Cadastrar produto</string>
    <string name="valor">R$ 0.00</string>
    <string name="quantidade">Quantidade</string>
    <string name="inserir">Inserir</string>
    <string name="adicionar_itens">Adicionar itens</string>
    <string name="total">TOTAL: 0,00</string>
    <string name="_4_qtd">4 Qtd</string>
    <string name="r_10_50">R$ 10,50</string>
    <string name="image_produto">Imagem produto</string>
</resources>
