<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        tools:context=".CadastroActivity">

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/cadastrar_produto"
            android:textSize="16sp"
            android:textStyle="bold"/>

    <ImageView
            android:id="@+id/imgProductPhotoRegister"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@android:drawable/ic_menu_camera"
            android:layout_gravity="center_horizontal"/>

    <EditText
            android:id="@+id/txtProductNameRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:hint="@string/nome_do_produto"/>

    <EditText
            android:id="@+id/txtProductQuantityRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:inputType="number"
            android:hint="@string/quantidade"/>

    <EditText
            android:id="@+id/txtProductPriceRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:textSize="16sp"
            android:hint="@string/valor"
            android:inputType="numberDecimal"/>

    <Button
            android:id="@+id/btnAddProduct"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/inserir"/>

</LinearLayout>